# retfound-training

./: .env.example  .env.runpod  .gitignore  AUDIT_COMPLET_PROJET.py  COMMANDES_ETAPE_PAR_ETAPE.md  CORRECTIONS_APPLIED_V61.md  CORRECTION_DEFINITIVE_PROJET.py  DOCUMENTATION_COMPLETE.md  FRONTEND_BACKEND_INTEGRATION.md  FRONTEND_TROUBLESHOOTING.md  GUIDE_COMPLET_RETFOUND.md  LICENSE  MIGRATION_V61_COMPLETE.md  README.md  RUNPOD_CLI_FIX_GUIDE.md  RUNPOD_DEPLOYMENT_INSTRUCTIONS.md  RUNPOD_FRONTEND_ACCESS_GUIDE.md  RUNPOD_FRONTEND_FIX_COMMANDS.md  RUNPOD_FRONTEND_LAUNCH_STEPS.md  RUNPOD_INSTALLATION.md  RUNPOD_NODEJS_FIX.md  RUNPOD_SIMPLE_CHECK.md  RUNPOD_TRAINING_DIAGNOSTIC.md  RUNPOD_TRAINING_GUIDE.md  SETUP_VALIDATION_SUMMARY.md  architecture projet caasi retfound.txt  check_all_imports.py  debug_export_module.py  debug_frontend_runpod.sh  debug_training_issue.py  fix_albumentations_runpod.py  fix_all_config_access.py  fix_cli_export.py  fix_datasets_direct.py  fix_final_datasets.py  fix_frontend_permissions.ps1  fix_frontend_permissions.sh  fix_frontend_permissions_runpod.sh  fix_frontend_runpod_complete.sh  fix_image_fromarray_complete.py  (+12 more)
configs/: dataset_v6.1.yaml  default.yaml  local_windows.yaml  runpod.yaml
configs/experimental/: sam_optimizer.yaml  tta_enhanced.yaml
configs/production/: a100_optimized.yaml  multi_gpu.yaml
retfound/: __init__.py  __version__.py
retfound/cli/: __init__.py  __main__.py  main.py  utils.py
retfound/cli/commands/: __init__.py  evaluate.py  export.py  predict.py  train.py
retfound/core/: __init__.py  config.py  constants.py  exceptions.py  registry.py
retfound/data/: __init__.py  cache.py  datamodule.py  datasets.py  samplers.py  transforms.py
retfound/evaluation/: __init__.py  evaluator.py
retfound/export/: __init__.py  exporter.py  inference.py  onnx.py  tensortrt.py  torchscript.py
retfound/metrics/: __init__.py  medical.py  report.py  visualization.py
retfound/models/: __init__.py  base.py  factory.py  retfound.py
retfound/models/layers/: __init__.py  attention.py  blocks.py  embeddings.py
retfound/monitoring/: README.md  __init__.py  api_routes.py  data_manager.py  demo.py  monitor_callback.py  server.py
retfound/monitoring/frontend/: .env.runpod  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.runpod.ts  vite.config.ts
retfound/monitoring/frontend/src/: App.tsx  index.css  main.tsx
retfound/monitoring/frontend/src/components/Charts/: ClassPerformance.tsx  ConfusionMatrix.tsx  LossChart.tsx  MetricsChart.tsx
retfound/monitoring/frontend/src/components/Dashboard/: Header.tsx  MetricsGrid.tsx  ProgressBar.tsx
retfound/monitoring/frontend/src/components/Monitoring/: CriticalAlerts.tsx  EpochDetails.tsx  GPUStats.tsx
retfound/monitoring/frontend/src/hooks/: useWebSocket.ts
retfound/monitoring/frontend/src/store/: monitoring.ts
retfound/monitoring/frontend/src/utils/: formatters.ts
retfound/training/: __init__.py  losses.py  optimizers.py  schedulers.py  trainer.py
retfound/training/callbacks/: __init__.py  base.py  checkpoint.py  early_stopping.py  logging.py  metrics.py
retfound/training/strategies/: __init__.py  base.py  ddp.py  single_gpu.py
retfound/utils/: __init__.py  device.py  io.py  logging.py  reproducibility.py  timing.py
scripts/: benchmark.py  download_weights.py  setup_environment.sh  setup_runpod.sh  setup_runpod_complete.sh  validate_dataset_v61.py  validate_setup.py
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py  test_cli.py  test_export.py  test_training.py
tests/unit/: test_config.py  test_datasets.py  test_losses.py  test_metrics.py  test_models.py  test_optimizers.py  test_utils.py
