[metadata]
name = retfound-training
version = attr: retfound.__version__.__version__
author = CAASI Medical AI Team
author_email = support@caasi-ai.com
description = Professional RETFound Training Framework for Ophthalmology
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/caasi/retfound-training
project_urls =
    Bug Tracker = https://github.com/caasi/retfound-training/issues
    Documentation = https://retfound-training.readthedocs.io
    Source Code = https://github.com/caasi/retfound-training
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: Other/Proprietary License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Medical Science Apps.

[options]
packages = find:
python_requires = >=3.9,<3.12
include_package_data = True
zip_safe = False

[options.packages.find]
where = .
include = retfound*
exclude = tests*

[options.package_data]
retfound = py.typed

[flake8]
max-line-length = 100
max-complexity = 10
exclude = 
    .git,
    __pycache__,
    build,
    dist,
    .eggs,
    *.egg,
    .venv,
    .tox,
    .mypy_cache,
    .pytest_cache,
    .hypothesis
ignore = 
    E203,  # whitespace before ':'
    E501,  # line too long (handled by black)
    W503,  # line break before binary operator
    W504,  # line break after binary operator
    D100,  # Missing docstring in public module
    D104,  # Missing docstring in public package
per-file-ignores =
    __init__.py:F401
    tests/*:D101,D102,D103

[tool:pytest]
minversion = 6.0
testpaths = tests
filterwarnings =
    error
    ignore::UserWarning
    ignore::DeprecationWarning

[egg_info]
tag_build = 
tag_date = 0
